[project]
name = "sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "alembic>=1.15.2",
    "flash-attn>=2.7.4.post1",
    "flashinfer-python==0.2.2.post1",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.30.2",
    "modal>=0.73.138",
    "ninja>=1.11.1.4",
    "packaging>=24.2",
    "passlib>=1.7.4",
    "pillow>=11.1.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "python-fasthtml>=0.12.9",
    "rerankers[transformers]>=0.9.1.post1",
    "simpleicons>=7.21.0",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "starlette>=0.46.1",
    "stripe>=11.6.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.1",
    "unstructured[local-inference,pdf]>=0.17.2",
    "vllm>=0.8.3",
    "wheel>=0.45.1",
]
